examples/test/testpolicy5440.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5440
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key35: value33
      key38: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value42
          key18: value24
      podSelector:
        matchLabels:
          key15: value22
          key21: value49
